6b-sg-web-lb.tf
resource "aws_security_group" "web_lb" {
  name        = "allow_http_for_alb"
  description = "Allow inbound HTTP for ALB in web tier"
  vpc_id      = aws_vpc.agol.id

  tags = {
    Name = "web-alb-sg"
    Tier = "web"
  }
}

resource "aws_vpc_security_group_ingress_rule" "web_lb_http" {
  security_group_id = aws_security_group.web_lb.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "web_lb_egress" {
  security_group_id = aws_security_group.web_lb.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}
